const mockMovies = {
  results: [
    {
      backdrop_path: "/3V4kLQg0kSqPLctI5ziYWabAZYF.jpg",
      id: 912649,
      original_language: "en",
      overview:
        "Eddie e Venom estão fugindo. Perseguidos pelos dois mundos, a dupla é forçada a tomar uma decisão devastadora que vai fechar as cortinas da última rodada de Venom e Eddie.",
      popularity: 3073.235,
      poster_path: "/fTGJWXuFDcRSIVPgQLbxziGquOC.jpg",
      release_date: "2024-10-22",
      title: "Venom: A Última Rodada",
      vote_average: "6.495",
    },
    {
      backdrop_path: "/iR79ciqhtaZ9BE7YFA1HpCHQgX4.jpg",
      id: 1100782,
      original_language: "en",
      overview:
        "A sequência vai girar em torno de Quinn Parsons (vivida por Naomi Scott, de Aladdin), uma cantora miserável em turnê que está tentando se recuperar do seu vício em drogas. Ela se tornará alvo da entidade do primeiro filme após seu traficante lhe passar a maldição.",
      popularity: 2261.273,
      poster_path: "/ypHiYvSJmHIyRDRiosZuE595uir.jpg",
      release_date: "2024-10-16",
      title: "Sorria 2",
      vote_average: "6.8",
    },
    {
      backdrop_path: "/euYIwmwkmz95mnXvufEmbL6ovhZ.jpg",
      id: 558449,
      original_language: "en",
      overview:
        "Anos depois de testemunhar a trágica morte do reverenciado herói Maximus nas mãos de seu tio malvado, Lucius se vê forçado a lutar no Coliseu depois que sua terra natal é conquistada por dois imperadores tirânicos, que agora governam Roma. Com o coração ardendo de raiva e o destino do Império pendurado por um fio, Lucius deve enfrentar perigos e inimigos, redescobrindo em seu passado a força e a honra necessárias para trazer a glória de Roma de volta ao seu povo. Prepare-se para uma jornada épica de coragem e vingança na sangrenta arena do Coliseu.",
      popularity: 1755.715,
      poster_path: "/342bly9MqveL65TnEFzx8TTUxcL.jpg",
      release_date: "2024-11-13",
      title: "Gladiador 2",
      vote_average: "6.8",
    },
  ],
};
