...
              placeholder="buscar...."
            />
          )}

          {!isFocused ? (
            <AntDesign
              testID="btnSearch"
              onPress={handleOpenKeyBoard}
              name="search1"
              size={24}
              color="white"
            />
          ) : (
...
