import { CrewMember } from "@/types/DetailsType";

const mockDetailsMovie = {
  data: {
    adult: false,
    budget: 310000000,
    genres: [
      {
        id: 28,
        name: "Ação",
      },
      {
        id: 12,
        name: "Aventura",
      },
    ],
    id: 558449,
    origin_country: ["US"],
    original_language: "en",
    original_title: "Gladiator II",
    overview:
      "Anos depois de testemunhar a trágica morte do reverenciado herói Maximus nas mãos de seu tio malvado, Lucius se vê forçado a lutar no Coliseu depois que sua terra natal é conquistada por dois imperadores tirânicos, que agora governam Roma. Com o coração ardendo de raiva e o destino do Império pendurado por um fio, Lucius deve enfrentar perigos e inimigos, redescobrindo em seu passado a força e a honra necessárias para trazer a glória de Roma de volta ao seu povo. Prepare-se para uma jornada épica de coragem e vingança na sangrenta arena do Coliseu.",
    popularity: 1293.172,
    poster_path: "/342bly9MqveL65TnEFzx8TTUxcL.jpg",
    production_companies: [
      {
        id: 4,
        logo_path: "/gz66EfNoYPqHTYI4q9UEN4CbHRc.png",
        name: "Paramount Pictures",
        origin_country: "US",
      },
      {
        id: 14440,
        logo_path: "/5QbaGiuxc91D6qf75JZGX6OKXoU.png",
        name: "Red Wagon Entertainment",
        origin_country: "US",
      },
      {
        id: 49325,
        logo_path: "/R05WCoCJcPWGSDaKaYgx3AeVuR.png",
        name: "Parkes+MacDonald Image Nation",
        origin_country: "US",
      },
      {
        id: 221347,
        logo_path: "/6Ry6uNBaa0IbbSs1XYIgX5DkA9r.png",
        name: "Scott Free Productions",
        origin_country: "US",
      },
    ],
    release_date: "2024-11-13",
    revenue: 307307811,
    runtime: 150,
    title: "Gladiador 2",
    vote_average: 6.7,
  },
  credits: {
    cast: [
      {
        adult: false,
        gender: 2,
        id: 2326151,
        known_for_department: "Acting",
        name: "Paul Mescal",
        original_name: "Paul Mescal",
        popularity: 42.942,
        profile_path: "/xoOl2vjfD5EUshYjjG9qhILUzTu.jpg",
        cast_id: 10,
        character: "Lucius Verus / Hanno",
        credit_id: "63b8777a1cfe3a00894541ec",
        order: 0,
      },
      {
        adult: false,
        gender: 2,
        id: 5292,
        known_for_department: "Acting",
        name: "Denzel Washington",
        original_name: "Denzel Washington",
        popularity: 73.44,
        profile_path: "/ffI7oAkIBvXpAMxNn21VDAnna1g.jpg",
        cast_id: 25,
        character: "Macrinus",
        credit_id: "641493c3ede1b028c599148f",
        order: 1,
      },
      {
        adult: false,
        gender: 2,
        id: 1253360,
        known_for_department: "Acting",
        name: "Pedro Pascal",
        original_name: "Pedro Pascal",
        popularity: 157.85,
        profile_path: "/9VYK7oxcqhjd5LAH6ZFJ3XzOlID.jpg",
        cast_id: 29,
        character: "General Acacius",
        credit_id: "64501ad035039802e7d5a111",
        order: 2,
      },
      {
        adult: false,
        gender: 1,
        id: 935,
        known_for_department: "Acting",
        name: "Connie Nielsen",
        original_name: "Connie Nielsen",
        popularity: 76.854,
        profile_path: "/lvQypTfeH2Gn2PTbzq6XkT2PLmn.jpg",
        cast_id: 26,
        character: "Lucilla",
        credit_id: "644bfc03336e0105177379a2",
        order: 3,
      },
      {
        adult: false,
        gender: 2,
        id: 1597365,
        known_for_department: "Acting",
        name: "Joseph Quinn",
        original_name: "Joseph Quinn",
        popularity: 35.242,
        profile_path: "/zshhuioZaH8S5ZKdMcojzWi1ntl.jpg",
        cast_id: 27,
        character: "Emperor Geta",
        credit_id: "644bfc0e596a91054d57f2f8",
        order: 4,
      },
      {
        adult: false,
        gender: 2,
        id: 2099497,
        known_for_department: "Acting",
        name: "Fred Hechinger",
        original_name: "Fred Hechinger",
        popularity: 21.931,
        profile_path: "/dLFy4KFR556j4Z9WstsslhJCwyZ.jpg",
        cast_id: 64,
        character: "Emperor Caracalla",
        credit_id: "6466aa282bcf67015581afa6",
        order: 5,
      },
      {
        adult: false,
        gender: 2,
        id: 1259880,
        known_for_department: "Acting",
        name: "Lior Raz",
        original_name: "Lior Raz",
        popularity: 10.078,
        profile_path: "/bl3KLFUQ4Q0zC9lCU4qP1Jf4qHS.jpg",
        cast_id: 60,
        character: "Viggo",
        credit_id: "6466952033a37600e6796f6d",
        order: 6,
      },
      {
        adult: false,
        gender: 2,
        id: 937,
        known_for_department: "Acting",
        name: "Derek Jacobi",
        original_name: "Derek Jacobi",
        popularity: 11.885,
        profile_path: "/htc4eCYmNlVotcu8AFTbDiLBzsJ.jpg",
        cast_id: 61,
        character: "Gracchus",
        credit_id: "6466952ba5046e012466c6a7",
        order: 7,
      },
    ],
    crew: [
      {
        id: 943,
        name: "John Mathieson",
        profile_path: "/AkWm67UMEWHhF3BDfH32HkRl5oM.jpg",
        department: "Camera",
        job: "Director of Photography",
      },
      {
        id: 5553,
        name: "Harry Gregson-Williams",
        profile_path: "/xLuIAM22zCffnzPyKOSRQQYh03C.jpg",
        department: "Sound",
        job: "Original Music Composer",
      },
      {
        id: 944,
        name: "Arthur Max",
        profile_path: "/kIh83DFSNqWQuHsR0CiKw3Qjf2n.jpg",
        department: "Art",
        job: "Production Design",
      },
      {
        id: 929,
        name: "David Franzoni",
        profile_path: "/uNDu3nnt5HCxuSxWAlDWrzQfWSz.jpg",
        department: "Writing",
        job: "Characters",
      },
      {
        id: 1914415,
        name: "Paul Biddiss",
        profile_path: null,
        department: "Crew",
        job: "Military Consultant",
      },
      {
        id: 946,
        name: "Janty Yates",
        profile_path: null,
        department: "Costume & Make-Up",
        job: "Costume Design",
      },
      {
        id: 1527474,
        name: "Michael A. Pruss",
        profile_path: null,
        department: "Production",
        job: "Producer",
      },
    ],
  },
};
export default mockDetailsMovie;
