...
            <View style={styles.notFound}>
              <MaterialCommunityIcons
                name="filmstrip-off"
                size={50}
                color="#fff"
              />
              <Text style={styles.notFoundTitle}>Nenhum Filme encontrado.</Text>
            </View>
          )}
        </View>
      )}
      {activeFavorite === "Series" && (
        <View style={styles.container}>
...
              <MaterialCommunityIcons
                name="television-off"
                size={50}
                color="#fff"
              />
              <Text style={styles.notFoundTitle}>
                Nenhuma Série encontrada.
              </Text>
            </View>
          )}
        </View>
      )}
    </View>
...
