appId: com.anonymous.appfilms
---
- runFlow: Login.yaml
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    id: "favorite"
- assertVisible: "Nenhum Filme encontrado."
- tapOn:
    id: "btnTopRatedSerie"
- assertVisible: "Nenhuma Série encontrada."
- tapOn:
    id: "movie"
- tapOn: 'Gladiador 2'
- tapOn:
    id: "btnFavoriteMovie"
- tapOn:
    id: "btnBack"
- tapOn:
    id: "serie"
- tapOn: 'Arcane'
- tapOn:
    id: "btnFavoriteSerie"
- tapOn:
    id: "btnBack"
- tapOn:
    id: "favorite"
- assertVisible: "Gladiador ||"
- tapOn:
    id: "btnTopRatedSerie"
- assertVisible: "Arcane"