appId: com.anonymous.appfilms
---
- launchApp
- waitForAnimationToEnd:
    timeout: 2000
- tapOn: maria@gmail.com
- inputText: example@gmail.com
- tapOn: Sua senha
- inputText: Ab12345678@
- tapOn: Login
